test/libsolidity/syntaxTests/inheritance/final_modifier/unimplemented_final_method.sol
contract C {
    function f() public final;
}
// ----
// TypeError: (17-43): Function declared final must be implemented.
